# Deposito_Pompilio

./: README.md
18 Agosto/Esercizio 1/: Esercizio1.py  input.txt
18 Agosto/Prova Action/: provafile.py
19 Agosto/Esercizio 1/: Esercizio1.py
20 agosto/: Esercizio1.py
ragFlow/ragflow/: README.md  intelligent_search_flow_plot.html  pyproject.toml
ragFlow/ragflow/docs/: conf.py
ragFlow/ragflow/docs/_build/html/: .buildinfo  .buildinfo.bak  objects.inv  searchindex.js
ragFlow/ragflow/docs/_build/html/.doctrees/: environment.pickle  index.doctree
ragFlow/ragflow/docs/_build/html/_sources/: index.rst.txt
ragFlow/ragflow/faiss_index_medical/: index.faiss  index.pkl
ragFlow/ragflow/src/ragflow/: main.py
ragFlow/ragflow/src/ragflow/crews/classifier_crew/: classifier_crew.py
ragFlow/ragflow/src/ragflow/crews/classifier_crew/config/: agents.yaml  tasks.yaml
ragFlow/ragflow/src/ragflow/crews/math_crew/: math_crew.py
ragFlow/ragflow/src/ragflow/crews/math_crew/config/: agents.yaml  tasks.yaml
ragFlow/ragflow/src/ragflow/crews/rag_crew/: rag_crew.py
ragFlow/ragflow/src/ragflow/crews/rag_crew/config/: agents.yaml  tasks.yaml
ragFlow/ragflow/src/ragflow/crews/search_crew/: search_crew.py
ragFlow/ragflow/src/ragflow/crews/search_crew/config/: agents.yaml  tasks.yaml
ragFlow/ragflow/src/ragflow/crews/tutorial_crew/: tutorial_crew.py
ragFlow/ragflow/src/ragflow/crews/tutorial_crew/config/: agents.yaml  tasks.yaml
ragFlow/ragflow/src/ragflow/tools/: custom_tool.py  math_tool.py  rag_tool.py
workflows/: requirements.txt
(+15 files in other folders)
