[project]
name = "ragflow"
version = "0.1.0"
description = "ragflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
    "ddgs>=9.5.4",
    "faiss-cpu>=1.12.0",
    "furo>=2025.7.19",
    "pylint>=3.3.8",
    "sphinx>=8.1.3",
]

[project.scripts]
kickoff = "ragflow.main:kickoff"
run_crew = "ragflow.main:kickoff"
plot = "ragflow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
